--- a/Components/Pages/Complaints.razor
+++ b/Components/Pages/Complaints.razor
@@ -21,7 +21,7 @@
 
         @foreach (var group in SortedGroups)
         {
-            <MudStack Row="true" Style="max-width: 90%;">
+            <MudStack Row="true" Style="max-width: 90%;" AlignItems="AlignItems.Center">
                 <MudAvatar>
                     <MudImage Src=@group.TargetAvatar></MudImage>
                 </MudAvatar>
