--- a/Components/Pages/Reviews.razor
+++ b/Components/Pages/Reviews.razor
@@ -11,7 +11,7 @@
 
 @if (ReviewList?.Count > 0)
 {
-    <MudPaper Elevation="3" Class="p-6 rounded-lg">
+    <MudPaper Class="p-6">
         <MudStack Spacing="3">
             <MudText Typo="Typo.h4">Мои отзывы</MudText>
             <MudDivider Class="mb-2" />
