--- a/Components/Pages/SendComplaintDialog.razor
+++ b/Components/Pages/SendComplaintDialog.razor
@@ -11,7 +11,7 @@
 
     <DialogContent>
         <MudText>
-            Вы подаёте жалобу на своего менеджера @Sender.Bshop.Manager.Lastname @Sender.Bshop.Manager.Restname
+            Вы подаёте жалобу на своего менеджера @Sender.Bshop.Manager.Lastname @Sender.Bshop.Manager.Restname. Система оповестит о жалобе администратора. Менеджер о ней оповещён не будет.
         </MudText>
 
         <MudTextField Label="Укажите содержание жалобы"
