--- a/Components/Pages/OrderHistroy.razor
+++ b/Components/Pages/OrderHistroy.razor
@@ -4,7 +4,7 @@
 
 @if (OrderList?.Count > 0)
 {
-    <MudPaper Elevation="3" Class="p-6 rounded-lg">
+    <MudPaper Class="p-6 rounded-lg">
         <MudStack Spacing="3">
             <MudText Class="mt-4 ml-4" Typo="Typo.h4">История заказов</MudText>
             <MudDivider Class="mb-2" />
@@ -38,7 +38,7 @@
 
                                 <!-- Order time -->
                                 <MudStack Row="true" Spacing="1">
-                                    <MudIcon Icon="@Icons.Material.Filled.Schedule" Color="Color.Secondary" />
+                                    <MudIcon Icon="@Icons.Material.Filled.Schedule" Color="Color.Primary" />
                                     <MudText>
                                         Создан: @o.OrderTime.ToString("dd MMMM yyyy, HH:mm")
                                     </MudText>
@@ -49,7 +49,7 @@
                                     <MudIcon Icon="@(o.Method == OrderMethod.Online
                                     ? Icons.Material.Filled.Computer
                                     : Icons.Material.Filled.Phone )"
-                                             Color="Color.Info" />
+                                             Color="Color.Primary" />
                                     <MudText>
                                         Способ записи: @(o.Method == OrderMethod.Online ? "Онлайн" : "По телефону")
                                     </MudText>
