--- a/Components/Pages/Payment.razor
+++ b/Components/Pages/Payment.razor
@@ -4,10 +4,12 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using MudBlazor
 @using System.Security.Claims
+@using barberchainAPI.Functional.Services
 @inject NavigationManager Navigation
 @inject BarberchainDbContext Context
 @inject AuthenticationStateProvider AuthStateProvider
 @inject IDialogService DialogService
+@inject INotificationService NotificationService
 
 <MudPopoverProvider />
 <MudDialogProvider />
@@ -226,7 +228,11 @@ else
             order.Status = OrderStatus.Waiting;
             await Context.SaveChangesAsync();
             success = true;
-            await NotifyBarber();
+
+            await NotificationService.NotifyAsync(order!.Barber.AccountId!.Value,
+                $"У вас новый заказ #{order.Id} на {order.AppointedTime}\nУслуги: " + string.Join(", ", Context.OrderJobs.Where(oj => oj.OrderId == order.Id).Select(oj => oj.Job.Name)),
+                NotificationType.General);
+
             StateHasChanged();
         }
         else
@@ -241,7 +247,11 @@ else
         order!.Status = OrderStatus.Waiting;
         await Context.SaveChangesAsync();
         success = true;
-        await NotifyBarber();
+
+        await NotificationService.NotifyAsync(order!.Barber.AccountId!.Value,
+            $"У вас новый заказ #{order.Id} на {order.AppointedTime}\nУслуги: " + string.Join(", ", Context.OrderJobs.Where(oj => oj.OrderId == order.Id).Select(oj => oj.Job.Name)),
+            NotificationType.General);
+
         StateHasChanged();
     }
 
@@ -253,28 +263,7 @@ else
             { x => x.user, user } };
         var dialog = await DialogService.ShowAsync<PhoneDialog>("Отклонить изменение расписания", params_, options);
         var dialogResult = await dialog.Result;
-        var phone = dialogResult.Data as string;
-    }
-
-    private async Task NotifyBarber()
-    {
-        var not = new Notification
-            {
-                Type = NotificationType.General,
-                Content = $"У вас новый заказ #{order.Id} на {order.AppointedTime}\nУслуги: " + string.Join(", ", Context.OrderJobs.Where(oj => oj.OrderId == order.Id).Select(oj => oj.Job.Name))
-            };
-
-        Context.Notifications.Add(not);
-        await Context.SaveChangesAsync();
-
-        var acc_not = new AccountNotification
-            {
-                AccountId = order!.Barber.AccountId!.Value,
-                NotificationId = not.Id
-            };
-
-        Context.AccountNotifications.Add(acc_not);
-        await Context.SaveChangesAsync();
+        var phone = dialogResult?.Data as string;
     }
 
     public class PaymentModel
